--- a/style.css
+++ b/style.css
@@ -303,6 +303,10 @@ nav {
     text-align: center;
     padding-top: 20px;
 }
+.team-box .designation{
+    text-align: center;
+    /* padding-top: 20px; */
+}
 
 
 /* Banner CSS */
@@ -355,7 +359,7 @@ nav {
 .contact-content {
     max-width: 90%;
     margin: auto;
-    height: 84%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -441,7 +445,7 @@ footer{
     .common-content {
         padding: 10px 20px;
         font-size: 1.6rem;
-        font-weight: 600;
+        font-weight: 700;
     }
 
     .common-content::after {
